# bones

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
products/: CMakeLists.txt
products/bones/: CMakeLists.txt  azure_vision_request.cpp  azure_vision_request.h  clusterizer.cpp  clusterizer.h  controller.cpp  controller.h  euclid.cpp  euclid.h  kinector.cpp  kinector.h  main.cpp  renderor.cpp  renderor.h  texture.h  viewerutil.h  viewerwindow.cpp  viewerwindow.h
products/bones/scene/: scene.cpp  scene.h  thingfinder.cpp  writair.cpp
products/kinect-demo/: CMakeLists.txt  azure_vision_request.cpp  azure_vision_request.h  body_geometry.cpp  body_geometry.h  clusterizer.cpp  clusterizer.h  common.h  controller.cpp  controller.h  euclid.cpp  euclid.h  k4aimgui_all.h  kinect_demo_viewer.cpp  kinect_demo_viewer.h  kinector.cpp  kinector.h  main.cpp  rendor.cpp  rendor.h  scene.cpp  scene.h  scene_writair.cpp  thingfinder.cpp  thingfinder.h  viewerwindow.cpp  viewerwindow.h  widget.h
products/kinect-demo/scene/: scene.cpp  scene.h  thingfinder.cpp  thingfinder.h  writair.cpp
